# kanastra-hiring-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: constants.py  models.py  tasks.py  views.py
api/migrations/: 0001_initial.py
api/tests/integration/: test_csv_integration.py
api/tests/unit/: test_tasks.py  test_views.py
challenge/: celery.py  settings.py  urls.py
